Corrigindo 'painel_produtos' para 'produtos'

--- a/principal/estoque/templates/estoque/excluir_produto.html
+++ b/principal/estoque/templates/estoque/excluir_produto.html
@@ -11,7 +11,7 @@
         <form method="post" class="actions">
             {% csrf_token %}
             <button type="submit">Sim, excluir</button>
-            <a href="{% url 'painel_estoque' %}">Cancelar</a>
+            <a href="{% url 'produtos' %}">Cancelar</a>
         </form>
     </div>
 </body>
