Corrigindo 'painel_produtos' para 'produtos 2 '

--- a/principal/estoque/templates/estoque/editar_produto.html
+++ b/principal/estoque/templates/estoque/editar_produto.html
@@ -12,7 +12,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Salvar Alterações</button>
-            <a href="{% url 'painel_estoque' %}">Cancelar</a>
+            <a href="{% url 'produtos' %}">Cancelar</a>
         </form>
     </div>
 </body>
