--- a/principal/estoque/templates/estoque/produtos.html
+++ b/principal/estoque/templates/estoque/produtos.html
@@ -1,25 +1,72 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel de Gerenciamento de Estoque</title>
+    <title>Produtos</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/produtos.css' %}">
 </head>
+
 <body>
-    <header>
-        <h1>Painel de Gerenciamento de Estoque</h1>
+    <header class="cabecalho">
+        <h1 class="logo">SISControl</h1>
+        <nav>
+            <ul class="botoes">
+                <li>
+                    <a class="botao" href="{% url 'home' %}">Home</a>
+                </li>
+                <li>
+                    <a class="botao" href="{% url 'produtos' %}">Produtos</a>
+                </li>
+                <li>
+                    <a class="botao" href="{% url 'cadastrar' %}">Cadastrar</a>
+                </li>
+                <!-- <a href="{% url 'home' %}">Home</a>
+        <a href="#">Produtos</a> -->
+                <!-- <a href="#">Entradas</a>
+        <a href="#">Saídas</a>
+        <a href="#">Relatórios</a> -->
+            </ul>
+        </nav>
     </header>
 
-    <nav>
-        <a href="{% url 'home' %}">Home</a>
-        <a href="#">Produtos</a>
-        <a href="#">Entradas</a>
-        <a href="#">Saídas</a>
-        <a href="#">Relatórios</a>
-    </nav>
+    <main class="pagina">
+        <section class="sessao">
+            <h2 class="subtitulo">Lista de Produtos</h2>
+            <div class="container">
+                <div class="card">
+                    <h3>Nome do produto1</h3>
+                    <p><strong>Preço:</strong> R$ 100,00</p>
+                    <p><strong>Qauntidade:</strong>10</p>
+                </div>
 
-    <div class="container">
-        <!-- Lista de Produtos -->
+                <div class="card">
+                    <h3>Nome do produto2</h3>
+                    <p><strong>Preço:</strong> R$ 100,00</p>
+                    <p><strong>Qauntidade:</strong>10</p>
+                </div>
+
+                <div class="card">
+                    <h3>Nome do produto3</h3>
+                    <p><strong>Preço:</strong> R$ 100,00</p>
+                    <p><strong>Qauntidade:</strong>10</p>
+                </div>
+
+                <div class="card">
+                    <h3>Nome do produto4</h3>
+                    <p><strong>Preço:</strong> R$ 100,00</p>
+                    <p><strong>Qauntidade:</strong>10</p>
+                </div>
+            </div>
+
+        </section>
+    </main>
+
+    <!-- <div class="container">
+        Lista de Produtos
         <div class="lista-produtos">
             <h2>Lista de Produtos</h2>
             <table>
@@ -45,23 +92,29 @@
             </table>
         </div>
 
-        <!-- Formulário para Cadastrar Novo Produto -->
-        <div class="formulario-produto">
-            <h2>Cadastrar Novo Produto</h2>
-            <form action="{% url 'adicionar_produto' %}" method="POST">
-                {% csrf_token %}
-                <label for="nome">Nome do Produto:</label>
-                <input type="text" id="nome" name="nome" required>
+     Formulário para Cadastrar Novo Produto
+    <div class="formulario-produto">
+        <h2>Cadastrar Novo Produto</h2>
+        <form action="{% url 'adicionar_produto' %}" method="POST">
+            {% csrf_token %}
+            <label for="nome">Nome do Produto:</label>
+            <input type="text" id="nome" name="nome" required>
 
-                <label for="quantidade">Quantidade:</label>
-                <input type="number" id="quantidade" name="quantidade" required>
+            <label for="quantidade">Quantidade:</label>
+            <input type="number" id="quantidade" name="quantidade" required>
 
-                <label for="preco">Preço:</label>
-                <input type="text" id="preco" name="preco" required>
+            <label for="preco">Preço:</label>
+            <input type="text" id="preco" name="preco" required>
 
-                <button type="submit">Cadastrar</button>
-            </form>
-        </div>
+            <button type="submit">Cadastrar</button>
+        </form>
     </div>
+    </div> -->
+
+    <footer class="rodape">
+        <p>₢ 2024 SISControl. Todos os direitos reservados.</p>
+    </footer>
+
 </body>
+
 </html>
