--- a/principal/estoque/templates/estoque/home.html
+++ b/principal/estoque/templates/estoque/home.html
@@ -21,7 +21,7 @@
                     <a class="botao" href="{% url 'produtos' %}">Produtos</a>
                 </li>
                 <li>
-                    <a class="botao" href="{% url 'cadastrar' %}">Cadastrar</a>
+                    <a class="botao" href="{% url 'cadastrar2' %}">Cadastrar</a>
                 </li>
                 <!-- <a href="#">Entradas</a>
                     <a href="#">Saídas</a>
