--- a/principal/estoque/static/css/style.css
+++ b/principal/estoque/static/css/style.css
@@ -69,7 +69,7 @@ gap: 20px;
 
 .rodape {
     background-color: #2d5399;
-    padding: 10px 0;
+    padding: 0 10px;
     text-align: center;
     color: white;
     font-size: 18px;
