--- a/principal/estoque/templates/estoque/cadastrar.html
+++ b/principal/estoque/templates/estoque/cadastrar.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'css/cadastrar.css'%}">
+    <link rel="stylesheet" href="{% static 'css/cadastrar.css' %}">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                     <a class="botao" href="{% url 'produtos' %}">Produtos</a>
                 </li>
                 <li>
-                    <a class="botao" href="{% url 'cadastrar2' %}">Cadastrar</a>
+                    <a class="botao" href="{% url 'cadastrar' %}">Cadastrar</a>
                 </li>
             </ul>
         </nav>
@@ -30,34 +30,34 @@
 
     <main class="pagina">
         <section class="sessao">
-            <form id="formulario_produto" class="formulario_produto">
-                <h2 class="subtitulo">Cadastrar Produtos</h2>
-                <div class="divisao_form">
-                    <label for="nome_produto">Nome do Produto</label>
-                    <input type="text" id="nome_produto" name="nome_produto" placeholder="Digite o nome do produto">
-                </div>
+            <div class="formulario-produto">
+                <h2 class="subtitulo">Cadastrar Novo Produto</h2>
+                <form id="formulario_produto" class="formulario_produto" action="{% url 'adicionar_produto' %}" method="POST">
+                    {% csrf_token %}
+                    <div class="divisao_form">
+                        <label for="nome">Nome do Produto:</label>
+                        <input type="text" id="nome" name="nome" required>
+                    </div>
 
-                <div class="divisao_form">
-                    <label for="preco">Preço (R$)</label>
-                    <input type="text" id="preco" name="preco" placeholder="Digite o preço do produto">
-                </div>
+                    <div class="divisao_form">
+                        <label for="quantidade">Quantidade:</label>
+                        <input type="number" id="quantidade" name="quantidade" required>
+                    </div>
 
-                <div class="divisao_form">
-                    <label for="qtde">Quantidade</label>
-                    <input type="number" id="qtde" name="qtde" placeholder="Digite a quantidade do produto">
-                </div>
+                    <div class="divisao_form">
+                        <label for="preco">Preço:</label>
+                        <input type="text" id="preco" name="preco" required>
+                    </div>
 
-                <button class="botao_form">Cadastrar</button>
-            </form>
+                    <button class="botao_form" type="submit">Cadastrar</button>
+                </form>
+            </div>
         </section>
     </main>
 
     <footer class="rodape">
         <p>₢ 2024 SISControl. Todos os direitos reservados.</p>
     </footer>
-
-    <script src="{% static 'js/script.js' %}"></script>
-
 </body>
 
 </html>
