--- a/principal/estoque/templates/estoque/home.html
+++ b/principal/estoque/templates/estoque/home.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISControl</title>
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
@@ -21,7 +22,7 @@
                     <a class="botao" href="{% url 'produtos' %}">Produtos</a>
                 </li>
                 <li>
-                    <a class="botao" href="{% url 'cadastrar2' %}">Cadastrar</a>
+                    <a class="botao" href="{% url 'cadastrar' %}">Cadastrar</a>
                 </li>
                 <!-- <a href="#">Entradas</a>
                     <a href="#">Saídas</a>
